[FIX] 디자인QA수정, 노션, 인스타 링크 추가, Header 버그 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
   ],
   "compilerOptions": {
     "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": false,
-    "strict": false
+    "strict": true
   }
 }
