[FIX] activities 투명도 수정, faq 헤더 모드 수정

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL = https://likelion14-recruit-staging.duckdns.org
 VITE_GA_ID=G-RPBJQ4Q6PZ
+VITE_ADMIN_PATH=admin79182e7i8-jd8h229jdkfj37r8x90
